# groonga-tokenizer-mecab-ko

./: CMakeLists.txt  README.md  mecabrc.in
.github/actions/install-mecab-ko/: action.yaml
.github/workflows/: lint.yaml  release.yaml  test.yaml
rpm/: groonga-tokenizer-mecab-ko.spec
test/suite/: brackets_quotes.expected  brackets_quotes.test  conjugation.expected  conjugation.test  double_jongseong.expected  double_jongseong.test  email_url.expected  email_url.test  emoji.expected  emoji.test  empty.expected  empty.test  honorifics.expected  honorifics.test  internet_slang.expected  internet_slang.test  jamo.expected  jamo.test  long_compound.expected  long_compound.test  mixed_language.expected  mixed_language.test  multiple_spaces.expected  multiple_spaces.test  newline_tab.expected  newline_tab.test  no_spaces.expected  no_spaces.test  numbers.expected  numbers.test  numbers_korean_mixed.expected  numbers_korean_mixed.test  one_token.expected  passive_causative.expected  passive_causative.test  proper_noun.expected  proper_noun.test  punctuation.expected  punctuation.test  repeated_words.expected  (+11 more)
tokenizers/: CMakeLists.txt  mecab_ko.c
